finished JS exprssion.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <p>working together...</p>
         <a href="https://www.mozilla.org/zh-TW/about/manifesto/">Mozilla Manifesto</a>
+        <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
 </html>
