--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <li>thinkers</li>
             <li>builders</li>
         </ul>
-
+        <p><a href="debug-example.html">Link to debug.html</a></p>
+       <p><a href="Letter.html">Link to Letter.html</a></p>
         <p>working together...</p>
         <a href="https://www.mozilla.org/zh-TW/about/manifesto/">Mozilla Manifesto</a>
         <button>Change user</button>
